--- a/doc/final.tex
+++ b/doc/final.tex
@@ -20,7 +20,6 @@
 \newtheorem{example}{Example}[section]
 \newtheorem{algorithm}{Algorithm}[section]
 \newtheorem{remark}{Remark}[section]
-\newtheorem{implementation}{Implementation}[section]
 
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
@@ -33,7 +32,7 @@
 
 \bibliographystyle{apalike}
 
-\graphicspath{{../code/}}
+\graphicspath{{../}}
 
 \title{A Crash Course in Numerical Methods for Initial Value Problems \\ \small{How to make a computer do horrible math for you}}
 \author{Ben Goldman}
@@ -42,7 +41,7 @@
 \maketitle
 
 \abstract{
-  Ordinary differential equations are fundamental to nearly all applications of mathematics, especially physics, in which one must work backwards from a known function of derivatives of an unknown function. However, many ordinary differential equations that appear in applications lack a closed-form solution. Scientists employ numerical methods to approximately solve these problems, enabling the computational simulation of nearly any physical system. Here I present the most frequently-used numerical tools for ordinary differential equations and analyze their properties. This paper assumes a background in differential calculus, through Taylor's Theorem.
+  Ordinary differential equations are fundamental to nearly all applications of mathematics, especially physics, in which one must work backwards from a known function of derivatives of an unknown function. However, many ordinary differential equations that appear in applications lack a closed-form solution. Scientists employ numerical methods to approximately solve these problems, enabling the computational simulation of nearly any physical system. Here I present the most frequently-used numerical tools for ordinary differential equations and analyze their properties. This paper assumes a background in differential calculus, through Taylor's Theorem. Example implementation is located \href{https://github.com/ben-goldman/ode}{here}.
 }
 
 \section{Motivation: why we want numerical methods for ODE's}
@@ -567,89 +566,6 @@ Suppose the weight is hanging still, and someone gives it a strong counterclockw
 Any symbolic/closed-form solution that describes the weight's position as a function of time would be horrendous. (Even a pendulum simply swinging has no closed-form solution.) Therefore, we should use a numerical solver to model this situation. Applying the 4$^\mathrm{th}$-order Runge-Kutta Method to this system over $t \in [0, 100]$seconds with a step size $h = 0.0001$ and the initial conditions 
 \[r(0) = \SI{10}{\meter} \quad r'(0) = \SI{0}{\meter\per\second} \quad \theta(0) = \SI{0}{\radian}, \qq{and} \theta'(0) = \SI{2.55}{\radian\per\second}\]
 produces the results in figure \ref{fig:f1}. The result indeed is how we would expect a tetherball to behave.
-
-\section*{Appendix: Python Implementation}
-
-\begin{implementation}{Euler's Method (Algorithm \ref{euler})}
-  \begin{verbatim}
-  def euler(fn, y_0, h, n):
-      out = np.zeros((n, len(y_0)))
-      for i in tqdm(range(n)):
-          y = out[i-1]
-          if i == 0:
-              out[0] = y_0
-          else:
-              t = h*i
-              y = y + fn(t, y) * h
-              out[i] = y
-      return out
-  \end{verbatim}
-\end{implementation}
-
-\begin{implementation}{4$^\mathrm{th}$-Order Runge-Kutta Method (Algorithm \ref{runge4})}
-  \begin{verbatim}
-  def runge(fn, y_0, h, n):
-      out = np.zeros((n, len(y_0)))
-      out[0] = y_0
-      for i in tqdm(range(n)):
-          y = out[i-1]
-          if i == 0:
-              out[0] = y_0
-          else:
-              t = h*i
-              q1 = fn(t, y)
-              q2 = fn(t + h/2, y + q1 * h/2)
-              q3 = fn(t + h/2, y + q2 * h/2)
-              q4 = fn(t + h/2, y + q3 * h/2)
-              y = y + h/6 * (q1 + 2 * q2 + 2 * q3 + q4)
-              out[i] = y
-      return out
-  \end{verbatim}
-\end{implementation}
-
-\begin{implementation}{4$^\mathrm{th}$-order Adams-Bashforth Method}
-  \begin{verbatim}
-  def adams_b4(fn, y_0, h, n):
-      out = np.zeros((n, len(y_0)))
-      out[0:4] = runge(fn, y_0, h, 4)
-      a0 = fn(0, out[0])
-      a1 = fn(1*h, out[1])
-      a2 = fn(2*h, out[2])
-      a3 = fn(3*h, out[3])
-      for i in range(n):
-          if i < 4:
-              continue
-          else:
-              out[i] = out[i-1] + (h/24)*(55*a3 - 59*a2 + 37*a1 - 9*a0)
-              a0 = a1
-              a1 = a2
-              a2 = a3
-              a3 = fn(i*h, out[i])
-      return out
-  \end{verbatim}
-\end{implementation}
-
-\begin{implementation}{Tetherball equations of motion}
-  \begin{verbatim}
-  def tetherball(t, y):
-      k = 10000
-      l = 10
-      m = 1
-      g = 10
-      d = 0.1
-      r = y[0]
-      r_ = y[1]
-      th = y[2]
-      th_ = y[3]
-      fs = 0
-      if r > l:
-          fs = k * (l - r)
-
-      rr = r*th_**2 + g*cos(th) + fs/m - (d/m) * r_
-      thh = 1/r * (-g*sin(th) - 2*r_*th_ - (d/m) * th_ * r)
-      return np.array([r_, rr, th_, thh])
-  \end{verbatim}
-\end{implementation}
 
 \nocite{burdenc2011}
 \nocite{greenbaum2012}
